--- a/LiHai/LiHai/LiHai.vcxproj.filters
+++ b/LiHai/LiHai/LiHai.vcxproj.filters
@@ -20,7 +20,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="common.h">
+    <ClInclude Include="types.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="option.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bisearch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="panic.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="base.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
