--- a/LiHai/LiHai/LiHai.vcxproj
+++ b/LiHai/LiHai/LiHai.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="qsort.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base.h" />
@@ -118,6 +119,7 @@
     <ClInclude Include="panic.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="option.h" />
+    <ClInclude Include="qsort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
