修复了 Bitmap 的 bug

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -1,8 +1,8 @@
-project(cpp_tests)
+project(LihaiCppTests)
 add_subdirectory(lib/googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 include_directories(../)
 set(TEST_SOURCE_FILES simple_algorithm.cpp)
-add_executable(cpp_tests ${TEST_SOURCE_FILES})
-target_link_libraries(cpp_tests gtest gtest_main)
-target_link_libraries(cpp_tests cpp)
+add_executable(LihaiCppTests ${TEST_SOURCE_FILES})
+target_link_libraries(LihaiCppTests gtest gtest_main)
+target_link_libraries(LihaiCppTests LihaiCpp)
