--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(lihai)
+project(Lihai)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -12,6 +12,6 @@ set(SOURCE_FILES
         cpp/qsort.h
         cpp/types.h cpp/bitmap.h cpp/generic.h)
 
-add_library(cpp ${SOURCE_FILES})
+add_library(LihaiCpp ${SOURCE_FILES})
 
 add_subdirectory(cpp/tests)
